<resources>

    <string name="app_name">Agenda clientes</string>

    <string name="hello_world">Hello world!</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_alta_usuarios">Alta nuevo cliente</string>
    <string name="Name">Nombre</string>
    <string name="Apell">Apellidos</string>
    <string name="Adress">Dirección</string>
    <string name="Telephone">Teléfono</string>
    <string name="email">Email</string>
    <string name="zona">Zona</string>
    <string name="Cancel">Cancelar</string>
    <string name="Save">Guardar</string>
    <string name="menu_editar">Editar cliente</string>
    <string name="menu_visualizar">Ver datos cliente</string>
    <string name="menu_eliminar">Eliminar</string>
    <string name="menu_llamar">Llamar al cliente</string>
    <string name="menu_crear">NUEVO CONTACTO</string>
    <string name="menu_crear_cliente">NUEVO CLIENTE</string>
    <string name="menu_borrar_muchos">ELIMINAR</string>
    <string name="menu_email">Enviar correo</string>
    <string name="menu_compartir">Compartir</string>
    <string name="menu_buscar">Buscar contacto</string>
    <string name="menu_traer_contactos">Importar tu agenda de Android</string>
    <string name="menu_borrar_todos">Borrar la agenda completa</string>
    <string name="menu_ver_agenda">Mostrar la agenda</string>
    <string name="menu_borrar_algunos">Borrar contactos</string>

    <string name="usuarios_editar_titulo">Editar Clientes</string>
    <string name="usuarios_crear_titulo">Nuevo cliente</string>
    <string name="title_activity_modificar_usuarios">Modificar clientes</string>
    <string name="lista_vacia">Sin Datos</string>
    <string name="agenda_crear_titulo">Alta Nuevo cliente</string>
    <string name="agenda_crear_confirmacion">Nuevo cliente</string>
    <string name="agenda_editar_titulo">Editar Cliente</string>
    <string name="agenda_editar_confirmacion">Cliente modificado</string>

    <string name="agenda_eliminar_titulo">Eliminar cliente</string>
    <string name="agenda_eliminar_muchos_titulo">Eliminación masiva de clientes</string>
    <string name="agenda_eliminar_todos_titulo">Eliminar todos los clientes</string>
    <string name="agenda_eliminar_mensaje">¿Seguro que desea eliminar este cliente?</string>
    <string name="agenda_eliminar_muchos_mensaje">A continuación se va a proceder a eliminar el cliente o los clientes seleccionados</string>
    <string name="agenda_eliminar_todos_mensaje">¿Seguro que desea eliminar todos los clientes de la agenda?</string>

    <string name="agenda_eliminar_confirmacion">Cliente eliminado</string>
    <string name="agenda_eliminar_todos_confirmacion">Se han eliminado todos los clientes de su agenda..!</string>
    <string name="agenda_eliminar_muchos_confirmacion">Proceso de eliminación finalizado..!</string>

    <string name="agenda_texto_vacio">Para dar de alta un nuevo cliente es obligatorio rellenar el nombre y el teléfono.</string>
    <string name="agenda_modificacion_vacia">El nombre del cliente está vacío. Revise el formulario.</string>
    <string name="Observaciones">Observaciones</string>
    <string name="title_activity_importar_contactos">Importar Contactos de Android</string>
    <string name="title_activity_importar_contactosWebService">Sincronizar Contactos en red</string>
    <string name="confirm_import">Se ha finalizado la importación de los contactos guardados en Android</string>
    <string name="confirm_importWebService">Se ha finalizado la importación de los contactos incluidos en red</string>

    <string name="aceptar_import">A continuación se va a proceder a importar todos los contactos que hubiera en su agenda de Android</string>
    <string name="aceptar_importWebService">A continuación se va a proceder a importar todos los contactos que hubiera en Servidor y que estén ya incluidos en tu Agenda de Clientes</string>
    <string name="titulo_activity_lista">CLIENTES INCLUIDOS EN TU AGENDA</string>

    <string name="no_hay_registros">NO HAY CLIENTES EN TU AGENDA</string>

    <string name="concatenar_numero_registros">HAY</string>

    <string name="observaciones_importados">Contacto importado desde la agenda de Android el día: </string>

    <string name="title_activity_settings">Acerca de</string>

    <string name="nueva_linea">Bienvenido\na tu agenda\nde clientes..!</string>

    <string name="check_toast">Position %1$d : %2$s</string>

    <string name="title_activity_borrar_usuarios">Borrar clientes</string>
    <string name="buscar_en_searchview">Buscar nombre</string>

    <string name="about">Si necesitas ayuda envía un correo a antoniom.sanchezf@gmail.com.\nAgenda Comercial de clientes es una aplicación realizada en el año @ 2015 por Antonio Sánchez.\nEstán reservados todos los derechos de modificación y/o publicación.
    </string>
    <string name="twiter">Sigueme en twiter:</string>
    <string name="enlace"><a href="http://twitter.com/antoniom_sf">http://twitter.com/antoniom_sf</a></string>

    <string name="title_activity_preferencias">Preferencias de la aplicación</string>
    <!-- Valores para SharePreferences-->
    <string name="title_user_category">CONFIGURACIÓN PARA LA SINCRONIZACIÓN</string>
    <string name="title_config_username">Usuario</string>
    <string name="config_username">Usuario para la sincronización de los datos</string>

    <string name="title_swipe_refresh">Activar Sincronización</string>
    <string name="summary_swipe_refresh">Deslizar para activar</string>

    <string name="title_server_category">Configuración del Servidor</string>
    <string name="title_config_server">Servidor</string>
    <string name="summary_config_server">Nombre o dirección del Servidor</string>

    <string name="title_config_port">Puerto de Comunicaciones</string>
    <string name="summary_config_port">Número del Puerto</string>
    <string name="agenda_salir" />

</resources>
