<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:yourapp="http://schemas.android.com/apk/res-auto"
    tools:context="com.antonymail.agenda.MainActivity" >
    <!---
        <item
            android:id="@+id/action_settings"
            android:orderInCategory="100"
            android:showAsAction="never"
            android:title="@string/action_settings"/>
    -->


    <item

        android:id="@+id/menu_crear"
        android:title="@string/menu_crear"
        android:icon="@drawable/amigos"
        android:orderInCategory="1"
        yourapp:showAsAction="always"/>



    <item
        android:id="@+id/buscar"
        android:title="@string/menu_buscar"
        android:icon="@android:drawable/ic_menu_search"
        yourapp:showAsAction="always|collapseActionView"

        yourapp:actionViewClass="android.support.v7.widget.SearchView"/>


    <item
        android:id="@+id/menu_traer_contactos"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/menu_traer_contactos"
        android:icon="@drawable/importado"/>


    <item
        android:id="@+id/menu_borrar_todos"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/menu_borrar_todos"
        android:icon="@drawable/amigos"/>
</menu>
