<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:theme="@style/AppAgendaTema"
    tools:context=".ModificarUsuarios">


    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <FrameLayout
            android:id="@+id/frame"
            android:layout_width="match_parent"
            android:layout_height="@dimen/status_bar_kitkat_height"
            android:background="?colorPrimary" />

        <android.support.v7.widget.Toolbar

            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?actionBarSize"
            android:layout_below="@+id/frame"
            android:background="?attr/colorPrimary"
            android:elevation="4dp"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
            app:theme="@style/ToolbarTheme" />


        <TextView
            android:id="@+id/label_nombre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/toolbar"
            android:paddingLeft="5dp"

            android:paddingTop="5dp"
            android:text="@string/Name"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/nombre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/label_nombre"
            android:ems="10"
            android:paddingLeft="5dp" />

        <TextView
            android:id="@+id/label_condiciones"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/nombre"
            android:layout_marginTop="20dp"
            android:paddingLeft="5dp"
            android:text="@string/Apell"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/apellidos"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/label_condiciones"
            android:ems="10"
            android:inputType="textMultiLine"
            android:paddingLeft="5dp"></EditText>

        <TextView
            android:id="@+id/label_contacto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/apellidos"
            android:layout_marginTop="20dp"
            android:paddingLeft="5dp"
            android:text="@string/Adress"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/direc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/label_contacto"
            android:ems="10"
            android:paddingLeft="5dp">

        </EditText>

        <TextView
            android:id="@+id/label_telefono"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/direc"
            android:layout_marginTop="20dp"
            android:paddingLeft="5dp"
            android:text="@string/Telephone"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/telefono"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/label_telefono"
            android:ems="10"
            android:inputType="phone"
            android:paddingLeft="5dp"></EditText>

        <TextView
            android:id="@+id/label_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/telefono"
            android:layout_marginTop="20dp"
            android:paddingLeft="5dp"
            android:text="@string/email"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/label_email"
            android:ems="10"
            android:inputType="textEmailAddress"
            android:paddingLeft="5dp" />

        <TextView
            android:id="@+id/t_tipo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/email"
            android:layout_marginTop="20dp"
            android:paddingLeft="5dp"
            android:text="Zona:"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <!--- Para que no aparezca
        <Spinner
            android:id="@+id/tipo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@id/t_tipo"
            android:layout_toRightOf="@id/t_tipo" />
        -->

        <RadioGroup
            android:id="@+id/radioGroup1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/t_tipo"
            android:layout_below="@+id/t_tipo"
            android:paddingLeft="5dp">

            <RadioButton
                android:id="@+id/radio1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="Alcorcón y alrededores" />

            <RadioButton
                android:id="@+id/radio2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Madrid capital" />

            <RadioButton
                android:id="@+id/radio3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Madrid CC.AA" />

            <RadioButton
                android:id="@+id/radio4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Otra CC.AA." />

            <RadioButton
                android:id="@+id/radio5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Otra País" />

            <RadioButton
                android:id="@+id/radio6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Sin calificar" />
        </RadioGroup>

        <TextView
            android:id="@+id/label_observaciones"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/radioGroup1"
            android:layout_marginTop="20dp"
            android:paddingLeft="5dp"
            android:text="@string/Observaciones"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/observaciones"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/label_observaciones"
            android:ems="10"
            android:inputType="textMultiLine"
            android:paddingLeft="5dp" />

        <LinearLayout
            android:id="@+id/botonera"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/observaciones"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/boton_cancelar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Cancel"
                android:textColor="@android:color/white"
                android:background="@drawable/redondeoesquinas"
                />
            <!--Para separar a los dos botones-->
            <View
                android:layout_width="5dp"
                android:layout_height="match_parent"
                android:background="@android:color/white">

            </View>

            <Button
                android:id="@+id/boton_guardar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Save"
                android:textColor="@android:color/white"
                android:background="@drawable/redondeoesquinas"/>

        </LinearLayout>

        <!--Se pone para evitar que colapse con la Navigation Bar-->
        <View
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_below="@+id/botonera"
            android:background="@android:color/white">

        </View>

    </RelativeLayout>


</ScrollView>
